force-app/main/default/objects/Violation_Definition__c/Violation_Definition__c.object-meta.xml
<CustomObject>
    <label>Violation Definition</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Violation Definition</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>