force-app/main/default/objects/Violation_Definition__c/fields/Deduction__c.field-meta.xml
<CustomField>
    <fullName>Deduction__c</fullName>
    <label>Deduction</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>