force-app/main/default/objects/Violation_Definition__c/fields/Latem__c.field-meta.xml
<CustomField>
    <fullName>Latem__c</fullName>
    <label>Late (m)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>