force-app/main/default/objects/Violation_Definition__c/fields/Working_Day__c.field-meta.xml
<CustomField>
    <fullName>Working_Day__c</fullName>
    <label>Count As (Working Day)</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>