force-app/main/default/objects/Violation_Definition__c/recordTypes/Early_Check_Out.recordType-meta.xml
<RecordType>
    <fullName>Early_Check_Out</fullName>
    <active>true</active>
    <label>Early Check Out</label>
</RecordType>