force-app/main/default/objects/Violation_Definition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Work_Policy__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>